# rust-flake

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/: dependabot.yml
.github/workflows/: flake-update.yml  nix.yml
src/: main.rs
